--- a/slides.tex
+++ b/slides.tex
@@ -102,12 +102,11 @@ Department of Computing
 \end{frame}
 
 \begin{frame}
-\frametitle{Software Context} % Table of contents slide, comment this block out to remove it
+\frametitle{Some abbreviations} % Table of contents slide, comment this block out to remove it
 \begin{itemize}
-	\item A newly founded university Edward University of Smartness in need of a course management system
-	\item Limited time, core functionalities to be delivered
-	\item Professor - upload course content, set quizzes and assignments
-	\item Student - view course content, answer quizzes and submit assignments
+	\item Assessment: Assignment and Quiz
+	\item Assessment Submission: Assignment and quiz submission
+	\item Course content: slides, notes etc.
 \end{itemize}
 \end{frame}
 
@@ -123,6 +122,19 @@ Department of Computing
 \end{frame}
 
 \begin{frame}
+	\frametitle{Entity Relationship Diagram}
+	\begin{figure}[!ht]
+		\begin{center}
+			\includegraphics[width=\textwidth,height=0.7\textheight,keepaspectratio]{erd}
+		\end{center}
+		\caption{ERD}
+	\end{figure}
+	
+\end{frame}
+
+
+
+\begin{frame}
 	\frametitle{Class Diagram}
 	\begin{figure}[!ht]
 		\begin{center}
@@ -134,6 +146,19 @@ Department of Computing
 \end{frame}
 
 \begin{frame}
+	\frametitle{System Architectural Diagram}
+	\begin{figure}[!ht]
+		\begin{center}
+			\includegraphics[width=\textwidth,height=0.7\textheight,keepaspectratio]{archi}
+		\end{center}
+		\caption{Architectural Diagram}
+	\end{figure}
+	
+\end{frame}
+
+
+
+\begin{frame}
 	\frametitle{State Machine Diagram}
 	\begin{figure}[!ht]
 		\begin{center}
@@ -143,11 +168,24 @@ Department of Computing
 	\end{figure}
 \end{frame}
 
+
+\begin{frame}
+	\frametitle{Activity Diagram}
+	\begin{figure}[!ht]
+		\begin{center}
+			\includegraphics[width=\textwidth,height=0.7\textheight,keepaspectratio]{activity_diagram}
+		\end{center}
+		\caption{Activity Diagram}
+	\end{figure}
+	
+\end{frame}
+
+
 \begin{frame}
 	\frametitle{Sequence Diagram}
 	\begin{figure}[!ht]
 		\begin{center}
-			\includegraphics[width=\textwidth,height=\textheight,keepaspectratio]{studSeq}
+			\includegraphics[width=\textwidth,height=0.7\textheight,keepaspectratio]{studSeq}
 		\end{center}
 		\caption{Sequence Diagram for Students}
 	\end{figure}
@@ -157,7 +195,7 @@ Department of Computing
 	\frametitle{Sequence Diagram (cont.)}
 	\begin{figure}[!ht]
 		\begin{center}
-			\includegraphics[width=\textwidth,height=\textheight,keepaspectratio]{profSeq}
+			\includegraphics[width=\textwidth,height=0.7\textheight,keepaspectratio]{profSeq}
 		\end{center}
 		\caption{Sequence Diagram for Professors}
 	\end{figure}
